# CV-UNIPD

./: README.md  error.txt  task1.cpp  task1_1.cpp  task1_2.cpp
final project/: CMakeLists.txt  readme.md
first_build/: CMakeLists.txt  ParkingLotManagement  readme.md
first_build/src/: CarSegmentation.cpp  CarSegmentation.h  OccupancyClassifier.cpp  OccupancyClassifier.h  ParkingSpaceDetector.cpp  ParkingSpaceDetector.h  PerformanceEvaluator.cpp  PerformanceEvaluator.h  TopViewVisualizer.cpp  TopViewVisualizer.h  XMLParser.cpp  XMLParser.h  main.cpp
lab1/: report.odt  task2.cpp
lab1/task1/: task1.cpp
lab1/task2/: task2.cpp
lab1/task3/: task3.cpp
lab1/task4/: task4.cpp
lab1/task5/: task5.cpp
lab2/: GardenDisplayAndConvert  GardenDisplayAndConvert.cpp  ImageFilters.cpp  ImageFilters.h  task1.cpp  task2  task2.cpp
lab3/: Task 1  Task 2  Task 3  Task 4  Task 5  Task 6  task3- Homan ( corrected).cpp
lab4/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
lab4/updated_codes/: task1.cpp  task2.cpp  task3.cpp
lab5/: task1  task1_1  task1_2
lab6/: first  first.cpp  readme.md
lab7/: readme.md
p1/: BallTracker.cpp  BallTracker.h  BilliardAnalyzer.cpp  BilliardAnalyzer.h  BilliardTableTopView.h  error.txt  main.cpp
september_project/: readme.md
